--- a/wololo-bot-commands.service
+++ b/wololo-bot-commands.service
@@ -3,3 +3,6 @@ Description=Wololo bot commands
 
 [Service]
 ExecStart=/home/ubuntu/wololo-bot/venv/bin/python /home/ubuntu/wololo-bot/wololo-bot-commands.py
+
+[Install]
+WantedBy=multi-user.target
