--- a/wololo-bot-matches.service
+++ b/wololo-bot-matches.service
@@ -3,6 +3,8 @@ Description=Wololo bot matches
 
 [Service]
 ExecStart=/home/ubuntu/wololo-bot/venv/bin/python /home/ubuntu/wololo-bot/wololo-bot-matches.py
+Restart=always
+RuntimeMaxSec=2h
 
 [Install]
 WantedBy=multi-user.target
